name:              gitit2
version:           0.0.0
license:           GPL
license-file:      LICENSE
author:            John MacFarlane
maintainer:        John MacFarlane
synopsis:          Next-generation version of gitit wiki server.
description:       A reimplementation of gitit in Yesod.  This is
                   a work in progress: many of gitit's features
                   are not yet implemented.
category:          Web
stability:         Experimental
cabal-version:     >= 1.8
build-type:        Simple
homepage:          http://gitit.net
data-files:        README.markdown
                   messages/en.msg
                   static/favicon.ico
                   static/robots.txt
                   static/js/bootstrap.min.js
                   static/js/jquery-1.7.2.min.js
                   static/js/jquery-ui-1.8.21.custom.min.js
                   static/img/logo.png
                   static/img/icons/feed.png
                   static/img/icons/folder.png
                   static/img/icons/page.png
                   static/img/glyphicons-halflings.png
                   static/img/glyphicons-halflings-white.png
                   static/css/custom.css
                   static/css/bootstrap.min.css
                   static/css/hk-pyg.css
                   static/css/print.css
                   static/css/screen.css
                   settings.yaml
                   data/FrontPage.page
                   data/Help.page
                   data/markup.Markdown
                   data/markup.RST
                   data/markup.HTML
                   data/markup.LaTeX
                   data/post-update

flag executable
  description:   Build the gitit executable.
  default:       True

library
    exposed-modules: Network.Gitit2
    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts
                EmptyDataDecls
                NoMonomorphismRestriction

    build-depends: base                          >= 4         
                 -- , yesod-platform                >= 1.1    
                 , yesod                         >= 1.1       
                 , yesod-static                  >= 1.1       
                 , yesod-core                    >= 1.1       
                 , yesod-form                    >= 1.1       
                 , yesod-test                    >= 0.3       
                 , clientsession                 >= 0.8       
                 , bytestring                    >= 0.9       
                 , text                          >= 0.11      
                 , template-haskell
                 , hamlet                        >= 1.1       
                 , shakespeare-css               >= 1.0       
                 , shakespeare-js                >= 1.0       
                 , shakespeare-text              >= 1.0       
                 , hjsmin                        >= 0.1       
                 , monad-control                 >= 0.3       
                 , wai-extra                     >= 1.3       
                 , yaml                          >= 0.8       
                 , conduit                       >= 0.5       
                 , http-conduit                  >= 1.6       
                 , directory                     >= 1.1       
                 , warp                          >= 1.3       
                 , filepath                      >= 1.3       
                 , filestore                     >= 0.5       
                 , utf8-string                   >= 0.3       
                 , blaze-html                    >= 0.5       
                 , blaze-markup                  >= 0.5       
                 , random                        >= 1.0       
                 , containers                    >= 0.4       
                 , pandoc                        >= 1.10       && < 1.12
                 , highlighting-kate             >= 0.5.0.6    
                 , xss-sanitize                  >= 0.3.2      
                 , yesod-newsfeed                >= 1.1        
                 , time                          >= 1.1        
                 , syb                           >= 0.3        
                 , directory                     >= 1.1        
                 , blaze-builder                 >= 0.3        
                 , pandoc-types                  >= 1.10       && < 1.11
                 , HTTP                          >= 4000.2    

    ghc-options:  -Wall -threaded -fno-warn-unused-do-bind

executable gitit2
    main-is:    gitit2.hs
    hs-source-dirs: src
    build-depends: base                          >= 4         
                 , yesod                         >= 1.1       
                 , yesod-static                  >= 1.1       
                 , filestore                     >= 0.5       
                 , containers                    >= 0.4       
                 , yaml                          >= 0.8       
                 , bytestring                    >= 0.9       
                 , warp                          >= 1.3       
                 , text                          >= 0.11      
                 , filepath                      >= 1.3       
                 , directory                     >= 1.1       
                 , network                       >= 2.3       
                 , pandoc                        >= 1.10      
                 , pandoc-types                  >= 1.10      
                 , syb                           >= 0.3       
                 , gitit2
    ghc-options:  -Wall -threaded -fno-warn-unused-do-bind
    if flag(executable)
       buildable:  True
    else
       buildable:  False
